css/create_indication_form_styles.css
/* Indication Form */

.node-type-page .page-header,
.node-type-page .field-name-body,
.node-type-page .tabs--primary {
	max-width: 987px;
	margin: 0 auto;
	margin-bottom: 12px;
}

#mapDiv {
    position: relative;
}

#rvk-ticketing-create-ticket-form {
	text-align: center;
	font-family: 'Open Sans', sans-serif;
	margin-top: 30px;
}

#rvk-ticketing-create-ticket-form label {
	margin-bottom: 4px;
	font-weight: 600;
}

#rvk-ticketing-create-ticket-form .form-group {
	margin-bottom: 17px;
}

.form-item-address .dropdown {
	display: block;
}

#rvk-ticketing-create-ticket-form  p {
	color: rgba(64,64,64,0.78);
	line-height: 1.8;
	margin-bottom: 24px;
}

#rvk-ticketing-create-ticket-form textarea {
	min-height: 188px;
}

#rvk-ticketing-create-ticket-form .toggle-icon {
	width: 22px;
	height: 22px;
	background: #ffffff url('images/svg/arrow-down.svg') no-repeat center center;
	border: 1px solid #404040;
	display: inline-block;
	cursor: pointer;
	position: relative;
	vertical-align: middle;
	margin-right: 12px;
	margin-top: -2px;
}

#rvk-ticketing-create-ticket-form .toggle-icon.flip {
	-webkit-transform:rotate(180deg);
    -moz-transform:rotate(180deg);
    -o-transform:rotate(180deg);
    -ms-transform:rotate(180deg);
    transform:rotate(180deg);
}

#rvk-ticketing-create-ticket-form fieldset {
	box-shadow: unset;
}

#rvk-ticketing-create-ticket-form #edit-map-body {
	margin-top: 6px;
}

#rvk-ticketing-create-ticket-form #edit-personal-info-fieldset,
#rvk-ticketing-create-ticket-form #edit-indication-fieldset {
	background-color: #f1f1f1;
	max-width: 987px;
	margin: 0 auto;
	border-color: #bfbfbf;
	text-align: left;
}

#rvk-ticketing-create-ticket-form #edit-personal-info-fieldset {
	border-top: none;
	padding: 23px;
	border-radius: unset;
	margin-bottom: 23px;
}

#rvk-ticketing-create-ticket-form #edit-indication-fieldset {
	border-bottom: none;
	padding: 23px 23px 0 23px;
	border-radius: unset;
}

#rvk-ticketing-create-ticket-form #edit-indication-fieldset-map-fieldset {
	margin-bottom: 12px;
}

#images-fieldset-wrapper .panel-body > button {
	margin-top: 24px;
}

#edit-indication-text-fieldset,
#edit-image-fieldset,
#edit-map-fieldset,
#edit-address,
#rvk-ticketing-create-ticket-form .panel {
   background: transparent;
   border: none;
}

#edit-personal-info-fieldset .form-control,
#edit-indication-fieldset .form-control {
	height: 46px;
	border-radius: 8px;
	box-shadow: unset;
}

#edit-personal-info-fieldset .form-control label,
#edit-indication-fieldset .form-control label {
	margin-bottom: 1px;
	font-weight: 600;
	padding-left: 5px;
}

#edit-personal-info-fieldset .panel-body, 
#edit-indication-fieldset .panel-body {
	padding: 0;
}

#edit-personal-info-fieldset h2, 
#edit-indication-fieldset h2 {
	font-size: 26px;
	font-weight: 700;
	margin-top: 0;
	margin-bottom: 7px;
}

#edit-personal-info-fieldset h3, 
#edit-indication-fieldset h3 {
	font-size: 16px;
	font-weight: 600;
	margin-top: 0;
	padding-top: 2px;
}

#edit-indication-fieldset .grippie {
	display: none;
}

#rvk-ticketing-create-ticket-form .btn-default,
#rvk-ticketing-create-ticket-form .form-submit,
#rvk-ticketing-create-ticket-form .input-group-btn button {
	border-color: #2e6da4;
	background-color: #337ab7;
	border-radius: 100px;
	width: 175px;
	font-size: 14px;
	padding: 12px;
	text-transform: uppercase;
	color: #ffffff;
	margin-bottom: 23px;
}

#rvk-ticketing-create-ticket-form .btn-default:hover,
#rvk-ticketing-create-ticket-form .form-submit:hover,
#rvk-ticketing-create-ticket-form .input-group-btn button:hover {
	color: #ffffff;
	background-color: #7ab733;
	border-color: #61902a;
}

#rvk-ticketing-create-ticket-form .collapse {
	max-height: 0;            
    overflow-y: hidden;
    display: block;
    transition: max-height 0.5s ease-in-out;
}

#rvk-ticketing-create-ticket-form .move #edit-map-fieldset .collapse {
	overflow-y: unset;
}

#rvk-ticketing-create-ticket-form .collapse.show-map,
#rvk-ticketing-create-ticket-form.show-image #images-fieldset-wrapper .collapse {
	max-height: 1000px;
}

#rvk-ticketing-create-ticket-form #LocateButton {
    top: 93px;
    left: 21px;
}

#rvk-ticketing-create-ticket-form #edit-map {
	border: none;
}

#rvk-ticketing-create-ticket-form #edit-map-body {
	margin: 0;
}

#rvk-ticketing-create-ticket-form #edit-indication-fieldset-map-fieldset-address .input-group-addon {
	position: absolute;
	z-index: 100;
	width: 40px;
	height: 32px;
	right: 0;
	border: none;
	background: transparent;
	top: 6px;
}

#rvk-ticketing-create-ticket-form .form-item-address .input-group {
	display: block;
}

#rvk-ticketing-create-ticket-form .form-item-address #edit-address--2 {
	display: block;
	margin-bottom: 20px;
}

#rvk-ticketing-create-ticket-form #edit-image-upload {
	display: block;
	overflow: hidden;
}

#rvk-ticketing-create-ticket-form #edit-image-fieldset .btn,
#rvk-ticketing-create-ticket-form #edit-indication-fieldset-image-fieldset-image-0-upload .input-group-btn,
#rvk-ticketing-create-ticket-form #images-fieldset-wrapper .input-group-btn button {
	position: absolute;
	right: 0;
	margin: 0;
	height: 45px;
	top: 0;
    display: block;
    border-top-right-radius: 8px;
    border-bottom-right-radius: 8px;
    border-top-left-radius: 0px;
    border-bottom-left-radius: 0px;
    width: 150px;
    z-index: 3;
}

#rvk-ticketing-create-ticket-form #edit-image-fieldset .input-group,
#rvk-ticketing-create-ticket-form #images-fieldset-wrapper .form-control,
#rvk-ticketing-create-ticket-form #images-fieldset-wrapper .input-group {
	width: 100%;
	display: block;
}

.locate-icon {
	padding: 2px;
	width: 26px;
	height: 26px;
	background-color: rgba(102,102,102,0.80);
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	cursor: pointer;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	-o-border-radius: 5px;
	border-radius: 5px;
	background-image: url("images/locate.png");
	background-position: center center;
	background-repeat: no-repeat;
	display: inline-block;
	vertical-align: middle;
}

@media screen and (min-width: 600px) {

	#rvk-ticketing-create-ticket-form #edit-personal-info-fieldset {
		padding: 46px;
	}

	#rvk-ticketing-create-ticket-form #edit-indication-fieldset {
		padding: 46px 46px 0 46px;
	}

	#rvk-ticketing-create-ticket-form #edit-personal-info-fieldset h2, 
	#rvk-ticketing-create-ticket-form #edit-indication-fieldset h2 {
		font-size: 28px;
	}

	#rvk-ticketing-create-ticket-form #edit-personal-info-fieldset h3, 
	#rvk-ticketing-create-ticket-form #edit-indication-fieldset h3 {
		font-size: 20px;
	}

	#rvk-ticketing-create-ticket-form #edit-personal-info-fieldset {
		margin-bottom: 46px;
	}

	#rvk-ticketing-create-ticket-form .btn-default,
	#rvk-ticketing-create-ticket-form .form-submit {
		margin-bottom: 46px;
	}

	#rvk-ticketing-create-ticket-form {
		margin-top: 60px;
	}

	#rvk-ticketing-create-ticket-form  p {
		line-height: 2.1;
	}
}

@media screen and (min-width: 1024px) {

	#rvk-ticketing-create-ticket-form #edit-indication-fieldset-indication-text-fieldset,
	#rvk-ticketing-create-ticket-form #edit-personal-info-fieldset-person {
		padding-left: 30px;
	}

	#rvk-ticketing-create-ticket-form #edit-personal-info-fieldset:before {
		content: "";
		height: 1px;
		width: calc(100% - 92px);
		background-color: #bfbfbf;
		position: absolute;
		top: 6px;
	}

	#rvk-ticketing-create-ticket-form textarea {
		min-height: 156px;
	}

	#rvk-ticketing-create-ticket-form #edit-indication-fieldset {
		position: relative;
	}

	#rvk-ticketing-create-ticket-form #edit-indication-fieldset h2,
	#rvk-ticketing-create-ticket-form #edit-personal-info-fieldset h2 {
		float: left;
		width: 39.64165733482643%;
		padding-right: 30px;
		margin-bottom: 16px;
	}

	#rvk-ticketing-create-ticket-form #edit-indication-fieldset p,
	#rvk-ticketing-create-ticket-form #edit-personal-info-fieldset p {
		float: left;
		width: 39.64165733482643%;
		clear: left;
		padding-right: 30px;
		text-align: justify;
  		text-justify: auto;
	}

	#rvk-ticketing-create-ticket-form #edit-indication-text-fieldset {
		padding-left: 30px;
	}

	#rvk-ticketing-create-ticket-form .collapse {
		transition-delay: 0.225s;
  	}

	#rvk-ticketing-create-ticket-form #edit-map-fieldset {
		position: relative;
		z-index: 2;
	}

	#edit-personal-info-fieldset h2, 
	#edit-indication-fieldset h2 {
		line-height: 1.4;
	}

	#rvk-ticketing-create-ticket-form #edit-map-fieldset-body p,
	#rvk-ticketing-create-ticket-form #edit-map-fieldset p {
		float: none;
		width: 100%;
		text-align: left;
		text-justify: unset;
	}

	#rvk-ticketing-create-ticket-form #edit-personal-info-fieldset .form-item-name {
		margin-top: -44px;
	}

}

